--- a/media.css
+++ b/media.css
@@ -182,6 +182,11 @@
 @media (max-width: 400px) {
    .about__us {
       padding-bottom: 50px;
+      margin-top: 200px;
+   }
+
+   .about__us-title {
+      font-size: 40px;
    }
 
    .about-cash__center .count-line {
