--- a/media.css
+++ b/media.css
@@ -77,6 +77,7 @@
    }
 }
 
+
 @media (max-width: 946px) {
    .subscribe-btn {
       right: 7%;
@@ -87,6 +88,7 @@
    .intro-header {
       font-size: 50px;
    }
+
 
    .about-cash__center .count-line {
       min-width: 630px;
@@ -105,14 +107,18 @@
       right: 2%;
    }
 
-  
 }
 
+@media (max-width: 769px) {
+   .intro-content {
+      margin-bottom: 270px;
+   }
+}
 
 @media (max-width: 600px) {
    .intro-content {
       padding-top: 140px;
-      margin-bottom: 213px;
+      margin-bottom: 30px;
    }
 
    .intro-header {
@@ -132,7 +138,6 @@
       padding-bottom: 100px;
    }
 
-   
    .start-item {
       width: 100%;
       text-align: center;
@@ -166,13 +171,10 @@
 }
 
 @media (max-width: 500px) {
-   
+
    .advantages {
       padding-bottom: 50px;
    }
-}
-
-@media (max-width: 500px) {
    .border {
       width: 370px;
       height: 390px;
@@ -182,7 +184,10 @@
 @media (max-width: 400px) {
    .about__us {
       padding-bottom: 50px;
+   }
 
+   .intro-header {
+      font-size: 30px;
    }
 
    .about__us-title {
