--- a/media.css
+++ b/media.css
@@ -89,11 +89,6 @@
       font-size: 50px;
    }
 
-
-   .about-cash__center .count-line {
-      min-width: 630px;
-   }
-
    .intro-item {
       width: 100px;
       height: 90px;
@@ -109,28 +104,37 @@
 
 }
 
-@media (max-width: 769px) {
-   .intro-content {
-      margin-bottom: 270px;
-   }
-}
 
 @media (max-width: 600px) {
    .intro-content {
-      padding-top: 140px;
-      margin-bottom: 30px;
+      padding-top: 112px;
    }
 
    .intro-header {
-      font-size: 41px;
+      font-size: 30px;
+      margin-bottom: 20px;
    }
 
-   .about__user-inner {
-      flex-direction: column;
+
+   .intro-header {
+      font-size: 30px;
    }
 
-   .about-cash__center .count-line {
-      min-width: 340px;
+   .intro-item {
+      width: 60px;
+      height: 60px;
+   }
+
+   .date {
+      font-size: 25px;
+   }
+
+   .title {
+      font-size: 15px;
+   }
+
+   .user {
+      margin-top: -30px;
    }
 
    .about__us {
@@ -182,6 +186,31 @@
 }
 
 @media (max-width: 400px) {
+
+   .intro-content {
+      margin-top: 80px;
+   }
+
+   .user {
+      margin-top: -60px;
+   }
+   .user-inner {
+      justify-content: center;
+   }
+
+   .date {
+      font-size: 20px;
+   }
+   .title {
+      font-size: 12px;
+   }
+
+   .intro-item {
+      width: 50px;
+      height: 50px;
+      margin-right: 15px;
+   }
+
    .about__us {
       padding-bottom: 50px;
    }
@@ -194,13 +223,13 @@
       font-size: 40px;
    }
 
-   .about-cash__center .count-line {
-      min-width: 280px;
-   }
-
    .border {
       width: 270px;
       height: 300px;
+   }
+
+   .count-line {
+      min-width: 250px;
    }
 }
 
