--- a/media.css
+++ b/media.css
@@ -86,12 +86,16 @@
 
 @media (max-width: 760px) {
    .intro-header {
-      font-size: 50px;
+      
    }
 
    .intro-item {
       width: 100px;
       height: 90px;
+   }
+
+   .count-line {
+      min-width: 540px;
    }
 
    .about__us {
@@ -106,19 +110,15 @@
 
 
 @media (max-width: 600px) {
+
    .intro-content {
-      padding-top: 112px;
+      
    }
 
    .intro-header {
-      font-size: 30px;
-      margin-bottom: 20px;
+      
    }
 
-
-   .intro-header {
-      font-size: 30px;
-   }
 
    .intro-item {
       width: 60px;
@@ -134,7 +134,7 @@
    }
 
    .user {
-      margin-top: -30px;
+
    }
 
    .about__us {
@@ -188,27 +188,19 @@
 @media (max-width: 400px) {
 
    .intro-content {
-      margin-top: 80px;
+      
+   }
+
+   .intro-header {
+      font-size: 37px;
    }
 
    .user {
-      margin-top: -60px;
+      
    }
+
    .user-inner {
       justify-content: center;
-   }
-
-   .date {
-      font-size: 20px;
-   }
-   .title {
-      font-size: 12px;
-   }
-
-   .intro-item {
-      width: 50px;
-      height: 50px;
-      margin-right: 15px;
    }
 
    .about__us {
@@ -216,7 +208,7 @@
    }
 
    .intro-header {
-      font-size: 30px;
+      
    }
 
    .about__us-title {
