--- a/style.css
+++ b/style.css
@@ -164,7 +164,9 @@ body {
 
 .user {
    background-color: #121212;
-   padding: 40px 0;
+   padding-top: 40px;
+   padding-bottom: 40px;
+   margin-top: -100px;
 }
 
 .user-inner {
