--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ body {
 /*-----------------------------------------USER--------------------------------*/
 
 .user {
-   background-color: red;
+   background-color: #121212;
    padding-top: 40px;
    padding-bottom: 40px;
    margin-top: -90px;
