ЗАЛИВАЮ САЙТ И КОРРЕКТИРОВКИ

--- a/media.css
+++ b/media.css
@@ -72,22 +72,11 @@
       padding: 100px 0 50px 0;
    }
 
-   .subscribe-btn {
-      right: 13%;
-   }
-}
-
-
-@media (max-width: 946px) {
-   .subscribe-btn {
-      right: 7%;
-   }
+   
 }
 
 @media (max-width: 760px) {
-   .intro-header {
-      
-   }
+   
 
    .intro-item {
       width: 100px;
@@ -102,23 +91,14 @@
       padding: 150px 0 50px 0;
    }
 
-   .subscribe-btn {
-      right: 2%;
+   .subscribe-input {
+      margin-bottom: 30px;
    }
+
 
 }
 
-
 @media (max-width: 600px) {
-
-   .intro-content {
-      
-   }
-
-   .intro-header {
-      
-   }
-
 
    .intro-item {
       width: 60px;
@@ -133,9 +113,6 @@
       font-size: 15px;
    }
 
-   .user {
-
-   }
 
    .about__us {
       padding-top: 100px;
@@ -163,10 +140,7 @@
       padding-top: 90px;
    }
 
-   .subscribe-btn {
-      right: 3%;
-   }
-
+   
    .social a {
       width: 40px;
       height: 40px;
@@ -187,18 +161,11 @@
 
 @media (max-width: 400px) {
 
-   .intro-content {
-      
-   }
-
    .intro-header {
       font-size: 37px;
    }
 
-   .user {
-      
-   }
-
+   
    .user-inner {
       justify-content: center;
    }
@@ -207,9 +174,6 @@
       padding-bottom: 50px;
    }
 
-   .intro-header {
-      
-   }
 
    .about__us-title {
       font-size: 40px;
@@ -223,6 +187,12 @@
    .count-line {
       min-width: 250px;
    }
+
+   
+
+
+
+
 }
 
 
