--- a/style.css
+++ b/style.css
@@ -580,7 +580,7 @@ content: '';
 
 .teacher-name {
 font-size: 24px;
-font-weight: 500px;
+font-weight: 500;
 color: white;
 margin-bottom: 15px;
 }
